# manga_ocr.rs-backend

./: .dockerignore  .env.example  .env.local.example  .gitattributes  .gitignore  .qenv  CLAUDE.md  CLI_TESTING.md  Cargo.toml  Dockerfile  README.md  build.rs  clean_text_ref  client.py  custom_ocr_setup_ref  docker-compose.yml  run_windows.bat  run_windows.ps1  run_windows_nvidia.bat  test_ocr.py  verify_models.ps1  verify_models.sh
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml  security-audit.yml  windows-release.yml
ext/: README.txt  SETUP.sh  SUMMARY.txt  background.js  content.js  content_server.js  detector.js  detector_standalone.py  gemini.js  manifest.json  popup.html  popup.js  python_refernce.py  renderer.js  rules.json
ext/_metadata/generated_indexed_rulesets/: _ruleset1
libs/: README.md
models/: sam2.1_tiny_preprocess.onnx  text_cleaner.onnx
models/ocr/: cjk_vocab.txt  ocr.onnx
ocr_validated_clean/: smart_cleaner.py
reference/: README.md  onnx_pipeline.py
reference/sam2.1_tiny/: sam2.1_tiny.onnx
src/: cache.rs  cli.rs  cli_interactive.rs  config.rs  cosmic_renderer.rs  detection.rs  errors.rs  lib.rs  main.rs  rendering.rs  schema.rs  translation.rs  types.rs
src/api/: errors.rs  handlers.rs  mod.rs  rate_limit.rs  v1.rs  v2.rs
src/core/: config.rs  errors.rs  mod.rs  types.rs
src/job_queue/: mod.rs
src/middleware/: api_key_pool.rs  circuit_breaker.rs  mod.rs  retry.rs
src/orchestration/: batch_orchestrator.rs  mod.rs
src/phases/: mod.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs
src/pipeline/: mod.rs
src/services/: font_manager.rs  mocks.rs  mod.rs  onnx_builder.rs  traits.rs
src/services/detection/: mod.rs
src/services/ocr/: mod.rs
src/services/rendering/: mod.rs
src/services/segmentation/: mod.rs  sam21_tiny.rs
src/services/translation/: api_client.rs  cache.rs  cerebras.rs  mod.rs
src/utils/: image_ops.rs  metrics.rs  mod.rs
tests/: integration_tests.rs
